<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context=".CameraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:cardBackgroundColor="@android:color/holo_blue_dark">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:text="@string/take_picture_advice"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="453dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:onClick="tirarFoto"
            android:text="@string/take_picture" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnSendPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="savePicture"
        android:text="@string/send_picture" />

</LinearLayout>