<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#007bff"
             tools:context=".SplashscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/action_sign_in"
                android:layout_width="224dp"
                android:layout_height="50dp"
                android:background="@drawable/white_login_button"
                android:textColor="@color/colorPrimary"
                android:id="@+id/btn_Login" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.497"/>
        <TextView
                android:text="@string/app_description"
                android:layout_width="342dp"
                android:layout_height="114dp"
                android:id="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textSize="18sp"
                android:textColor="#FDFDFD" app:layout_constraintHorizontal_bias="0.49" android:gravity="center"
                android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="@string/app_description"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" tools:text="@string/app_name"
                android:gravity="center" android:textColor="#FDFDFD"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <TextView
                android:text="@string/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:textColor="#FDFDFD"
                tools:text="@string/welcome" android:textSize="24sp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginTop="150dp" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>