<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="42dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="@android:color/holo_blue_dark" android:id="@+id/topBar">
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/textView6" tools:text="@string/app_name"
                android:textSize="24sp" android:textAlignment="center" android:textAllCaps="false"
                android:textColor="@android:color/white" android:gravity="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/docsList"
            android:layout_height="0dp" android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/topBar"
            app:layout_constraintBottom_toTopOf="@+id/bottomBarDocList">
    </androidx.recyclerview.widget.RecyclerView>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/bottomBarDocList"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@android:color/holo_blue_dark">

        <Button
                android:id="@+id/btnDocuments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="8dp"
                android:text="@string/new_document"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnAccount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/btnAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="8dp"
                android:text="@string/refresh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnClose"
                app:layout_constraintStart_toEndOf="@+id/btnDocuments"
                app:layout_constraintTop_toTopOf="parent" />
        <Button
                android:text="@string/close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnClose"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnAccount"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="2dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>