<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/constraintLayout"
                                                   tools:context=".DocDetailActivity">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="42dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="@android:color/holo_blue_dark" android:id="@+id/topBar">
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/textView6" tools:text="@string/app_name"
                android:textSize="24sp" android:textAlignment="center" android:textAllCaps="false"
                android:textColor="@android:color/white" android:gravity="center"/>
    </androidx.cardview.widget.CardView>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/topBar"
            app:layout_constraintBottom_toTopOf="@+id/bottomBar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@android:color/darker_gray">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                tools:layout_editor_absoluteY="8dp" android:id="@+id/VersionsList">

            <TextView
                    android:text="@string/Details"
                    android:layout_width="0dp"
                    android:layout_height="21dp"
                    android:id="@+id/textView7"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:gravity="center_horizontal"
                    android:textSize="16sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="@color/cardview_light_background"
                    app:cardCornerRadius="10dp"
                    android:layout_height="wrap_content" app:contentPaddingBottom="10dp"
                    app:contentPaddingLeft="10dp" app:contentPaddingRight="30dp"
                    app:contentPaddingTop="10dp"
                    app:cardElevation="30dp" app:cardMaxElevation="30dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                    android:id="@+id/cardView" app:layout_constraintTop_toBottomOf="@+id/textView7"
                    android:layout_marginTop="8dp" android:visibility="visible">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_height="match_parent">

                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="01/01/2000"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/docLastDate"
                                android:layout_weight="1"
                                android:textColor="@android:color/tertiary_text_light"
                        />
                        <TextView
                                android:text="0 versão"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/docVersionsQty"
                                android:layout_weight="1"
                                android:textColor="@android:color/tertiary_text_light" android:textAlignment="viewEnd"
                        />
                    </LinearLayout>
                    <TextView
                            android:textColor="@android:color/holo_blue_dark"
                            android:layout_width="match_parent"
                            tools:text="Documento"
                            android:id="@+id/docName"
                            android:layout_height="wrap_content" android:textAlignment="viewStart"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                    <TextView
                            android:textColor="@android:color/tertiary_text_light"
                            android:layout_width="match_parent"
                            tools:text="Courso"
                            android:id="@+id/docCourse"
                            android:layout_height="wrap_content" android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <TextView
                    android:text="@string/Versions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/VersionsHeader"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/bottomBar"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@android:color/holo_blue_dark">
        <Button
                android:text="@string/documents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnDocuments"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/btnAccount"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" android:layout_marginEnd="2dp"/>
        <Button
                android:text="@string/account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnAccount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnClose"
                app:layout_constraintStart_toEndOf="@+id/btnDocuments"
                android:layout_marginEnd="2dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                android:layout_marginStart="2dp" android:layout_marginTop="8dp"/>
        <Button
                android:text="@string/close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnClose"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnAccount"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="2dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>